[package]
name = "graph"
version = "0.1.0"
publish = false
edition = "2021"

[dependencies]
gloo-utils = { version = "0.1.6", features = ["serde"] }
num-traits = "0.2.15"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
wasm-bindgen = "0.2.83"
web-sys = { version = "0.3", features = ["console"] }
