[package]
name = "mbf"
version = "0.1.0"
publish = false
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
algorithm = { path = "../algorithm" }
graph = { path = "../graph" }

console_error_panic_hook = "0.1.7"
serde = { version = "1.0", features = ["derive"] }
serde_with = "2.3"
wasm-bindgen = "0.2.83"
